giving up on GraalVM. trying to pack JRE directly from installers